--- a/arch/arm/hotplug/Kconfig
+++ b/arch/arm/hotplug/Kconfig
@@ -1,3 +1,10 @@
+config MSM_HOTPLUG
+	bool "MSM hotplug driver"
+	depends on HOTPLUG_CPU
+	default y
+	help
+	  The MSM hotplug driver controls on-/offlining of additional cores based on current cpu load.
+
 config CLUSTER_PLUG
         bool "Enable cluster-plug cpu hotplug driver"
         default n
