hotplug: Add Mako hotplug

--- a/arch/arm/configs/merlin_defconfig
+++ b/arch/arm/configs/merlin_defconfig
@@ -468,6 +468,7 @@ CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_MSM_SLEEPER=y
 CONFIG_ASMP=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
+CONFIG_MAKO_HOTPLUG=y
 
 #
 # Bus support
