--- a/arch/arm/hotplug/Kconfig
+++ b/arch/arm/hotplug/Kconfig
@@ -42,3 +42,10 @@ config MAKO_HOTPLUG
  	help
  	  Mako Hotplug: A custom hotplug by fransico franco
 
+config INTELLI_PLUG
+ 	bool "Hotplug for Razor Reborn"
+ 	depends on MSM_RUN_QUEUE_STATS
+ 	default y
+ 	help
+ 	  This enables kernel based multi core control.
+
