--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -32,7 +32,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-UltraDevs_v6"
+CONFIG_LOCALVERSION="-UltraDevs_v7"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -3315,7 +3315,7 @@ CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_ARMBW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
-# CONFIG_ADRENO_IDLER is not set
+CONFIG_ADRENO_IDLER=y
 # CONFIG_DEVFREQ_GOV_MSM_CPUFREQ is not set
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 # CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON is not set
