--- a/arch/arm/configs/osprey_defconfig
+++ b/arch/arm/configs/osprey_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.10.107 Kernel Configuration
+# Linux/arm 3.10.108 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -32,7 +32,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-UltraDevs_v7"
+CONFIG_LOCALVERSION="-UltraDevs_v8"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -468,8 +468,8 @@ CONFIG_BRICKED_HOTPLUG=y
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_MSM_SLEEPER=y
 CONFIG_ASMP=y
-CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_INTELLI_PLUG=y
 
 #
 # Bus support
@@ -599,17 +599,21 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTRON is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
+# CONFIG_CPU_FREQ_GOV_ELECTRON is not set
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
@@ -1660,6 +1664,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_MMI=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS_MMI is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
 # CONFIG_TOUCHSCREEN_TOUCHWIN is not set
 # CONFIG_TOUCHSCREEN_PIXCIR is not set
@@ -3202,7 +3207,6 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3338,7 +3342,6 @@ CONFIG_ARM_GIC=y
 CONFIG_MSM_SHOW_RESUME_IRQ=y
 CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
-# CONFIG_MOBICORE_SUPPORT is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
@@ -3364,6 +3367,7 @@ CONFIG_MSM_RPM_SMD=y
 # CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
+CONFIG_MSM_RUN_QUEUE_STATS=y
 CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMEM_LOGGING=y
 CONFIG_MSM_SMP2P=y
